--- a/rzdapp/app/globals.css
+++ b/rzdapp/app/globals.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #0481C7;
+  background-color: #444441;
   display: flex;
   justify-content: center;
   align-items: center;
