--- a/rzdapp/app/style/Home.module.css
+++ b/rzdapp/app/style/Home.module.css
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #ffffff;
+    background-color: #dbdbdb;
   }
   
   .formSection h1 {
@@ -49,7 +49,7 @@
   .inputGroup input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ff000d81;
     border-radius: 5px;
     font-size: 14px;
   }
