--- a/rzdapp/app/globals.css
+++ b/rzdapp/app/globals.css
@@ -7,26 +7,30 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #444441;
+  background-image: url("./rzd.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* opacity: 0.6; */
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
-
 button {
   width: 100%;
   padding: 12px;
-  font-size: 16px;
-  color: #fff;
   background-color: #C8050E;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #e30613;
+  background-color: #a3040b;
 }
-
-
