--- a/rzdapp/app/style/Home.module.css
+++ b/rzdapp/app/style/Home.module.css
@@ -1,3 +1,11 @@
+.bodydiv {
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
 .container {
   display: flex;
   width: 100%;
