--- a/rzdapp/app/style/Home.module.css
+++ b/rzdapp/app/style/Home.module.css
@@ -26,10 +26,22 @@
   align-items: center;
   overflow: hidden; 
 }
-.imagess {
+.imagess  {
   width: 100%;
   height: auto; 
   object-fit: cover; 
+}
+@media (max-width: 1100px) {
+  .imageSection{
+    display: none;
+  }
+  .container{
+    width: 90%;
+  }
+  .formSection{
+    width: 100% !important;
+  }
+
 }
 .formSection {
   width: 50%;
