--- a/rzdapp/app/globals.css
+++ b/rzdapp/app/globals.css
@@ -115,7 +115,7 @@ body {
   margin: 0;
   height: 100%;
   font-family: Arial, sans-serif;
-  background-image: url("./rzd.jpg");
+  background-image: url("../public/rzd.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
